# dash

./: .dockerignore  .env  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README-zh_CN.md  README.md  build-docker.sh  build-server.sh  build.Dockerfile  dash.code-workspace  docker-compose.yml  settings.example.toml  settings.example.yaml  wego.code-workspace
.github/workflows/: build.yml  docker.yml
client/: .eslintignore  .eslintrc  .eslintrc.js  README.md  index.html  package.json  rspack.config.js  tsconfig.json  vite.config.ts
client/src/: Dash.tsx  dash.module.less  env.d.ts  main.tsx  router.tsx
client/src/WeGo/: index.module.scss  index.tsx
client/src/assets/iconfont/: iconfont.css
client/src/components/App/: index.module.less  index.module.scss  index.tsx
client/src/components/AppEdit/: index.tsx
client/src/components/AppIcon/: index.tsx
client/src/components/Apps/: index.module.scss  index.tsx
client/src/components/Header/: index.module.scss  index.tsx
client/src/components/Header/Setting/: index.module.scss  index.tsx
client/src/components/Header/User/: index.module.scss  index.tsx
client/src/components/ImageUploader/: index.module.less  index.module.scss  index.tsx
client/src/components/Login/: index.module.scss  index.tsx
client/src/components/PasswordUpdate/: index.tsx
client/src/components/SiteBar/: index.tsx
client/src/components/UserCreate/: index.tsx
client/src/components/UserUpdate/: index.tsx
client/src/components/Wallpaper/: index.tsx
client/src/hooks/: useLocalStorage.ts  useRequest.ts  useSWR.ts  useSWRMutation.ts
client/src/queries/: apps.ts  user.ts
client/src/recoil/: apps.ts  user.ts
client/src/routes/Apps/: index.module.less  index.tsx
client/src/routes/Apps/components/EditableApp/: index.module.less
client/src/routes/Home/: index.module.less  index.tsx
client/src/routes/Login/: index.module.less  index.tsx
client/src/routes/NotFound/: index.module.less  index.tsx
client/src/routes/Root/: index.tsx
client/src/routes/Settings/: index.tsx
client/src/routes/Users/: index.tsx
client/src/routes/Users/components/MyProfile/: index.tsx
client/src/routes/Users/components/UserManage/: index.module.less  index.tsx
client/src/store/: setting.ts  user.ts
client/src/styles/: index.less  index.scss  theme.scss
client/src/types/: app.ts  setting.ts  user.ts
client/src/utils/: fetcher.ts  file.ts
entity/: Cargo.toml
entity/src/: apps.rs  lib.rs  prelude.rs  settings.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230301_000000_create_table.rs
resources/: wallpaper.psd
src/: errors.rs  main.rs  settings.rs
src/api/: app.rs  auth.rs  mod.rs  password.rs  proxy.rs  setting.rs  user.rs
src/api/file/: image.rs  mod.rs
src/core/: app.rs  auth.rs  file.rs  mod.rs  password.rs  proxy.rs  setting.rs  user.rs
utils/: Cargo.toml
utils/src/: crypto.rs  deserialize.rs  lib.rs  serialize.rs
web/: .eslintrc.js  README.md  index.html  package.json  rspack.config.js  workbox-config.js
web/public/: manifest.json
web/src/: Dash.tsx  env.d.ts  main.tsx  router.tsx
web/src/components/ErrorElement/: index.module.less
web/src/components/ImageUploader/: index.tsx
web/src/components/SiteBar/: index.module.less
web/src/components/UserUpdate/: index.tsx
web/src/hooks/: useLocalStorage.ts
web/src/routes/Apps/components/EditableApp/: index.module.less  index.tsx
web/src/routes/Home/: index.module.less  index.tsx
web/src/routes/Login/: index.tsx
web/src/routes/NotFound/: index.module.less
web/src/routes/Root/: index.tsx
web/src/routes/Settings/: index.module.less
web/src/routes/Users/: index.module.less
web/src/routes/Users/components/MyProfile/: index.module.less
web/src/store/: apps.ts
web/src/types/: user.ts
web/src/utils/: fetcher.ts
