[package]
name = "dash"
version = "0.0.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration", "utils"]

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
config = "0.13"
anyhow = "1.0"
regex = "1.8"
lazy_static = "1.4"
actix-multipart-extract = "0.1"
chrono = "0.4"
urlencoding = "2.1"
futures-core = "0.3"
entity = { path = "./entity" }
migration = { path = "./migration" }
utils = { path = "./utils" }

[dependencies.sea-orm]
version = "0.11"
features = ["debug-print", "sqlx-all", "runtime-async-std-rustls"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["stream", "rustls-tls-native-roots"]
