[package]
name = "dash"
version = "0.0.3"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration", "utils"]

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = [
  "macros",
] }
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"
config = { version = "0.15.11", default-features = false, features = [
  "ron",
  "yaml",
] }
anyhow = "1.0.98"
regex = "1.11.1"
lazy_static = "1.5.0"
actix-multipart-extract = "0.1.5"
chrono = "0.4.41"
urlencoding = "2.1.3"
futures-core = "0.3.31"
rust-embed = { version = "8.7.2", features = ["mime-guess"] }
entity = { path = "./entity" }
migration = { path = "./migration" }
utils = { path = "./utils" }

[dependencies.sea-orm]
version = "1.1.12"
features = ["debug-print", "sqlx-all", "runtime-async-std-rustls"]

[dependencies.reqwest]
version = "0.12.20"
default-features = false
features = ["stream", "rustls-tls-native-roots"]
