[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "2.1"
rand = { version = "0.8", default-features = false, features = ["std"] }
lazy_static = "1.4"
serde = "1.0"
